// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoBox component Renders correctly 1`] = `
<div>
  <div
    class="flex items-center px-5 py-3 bg-coreUI-background-images"
  >
    <svg
      class="undefined fill-brand-black stroke-brand-black"
      fill="inherit"
      height="24"
      viewBox="0 0 20 21"
      width="24"
    >
      <path
        clip-rule="evenodd"
        d="M11 14.4229H10V10.4229H9M10 6.42285H10.01M19 10.4229C19 15.3934 14.9706 19.4229 10 19.4229C5.02944 19.4229 1 15.3934 1 10.4229C1 5.45229 5.02944 1.42285 10 1.42285C14.9706 1.42285 19 5.45229 19 10.4229Z"
        fill="none"
        fill-rule="evenodd"
        stroke="inherit"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="flex pl-3 flex-row"
    >
      <span
        class="font-bold pr-2 text-xs leading-4"
      >
        Title here
      </span>
      <span
        class="text-xs leading-4"
      >
        Some information goes here
      </span>
    </div>
  </div>
</div>
`;

exports[`InfoBox component Renders correctly without text 1`] = `
<div>
  <div
    class="flex items-center px-5 py-3 bg-coreUI-background-images"
  >
    <svg
      class="undefined fill-brand-black stroke-brand-black"
      fill="inherit"
      height="24"
      viewBox="0 0 20 21"
      width="24"
    >
      <path
        clip-rule="evenodd"
        d="M11 14.4229H10V10.4229H9M10 6.42285H10.01M19 10.4229C19 15.3934 14.9706 19.4229 10 19.4229C5.02944 19.4229 1 15.3934 1 10.4229C1 5.45229 5.02944 1.42285 10 1.42285C14.9706 1.42285 19 5.45229 19 10.4229Z"
        fill="none"
        fill-rule="evenodd"
        stroke="inherit"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="flex pl-3 flex-row"
    >
      <span
        class="font-bold pr-2 text-xs leading-4"
      >
        Title here
      </span>
    </div>
  </div>
</div>
`;
